--- a/property-owner-service.properties
+++ b/property-owner-service.properties
@@ -14,7 +14,7 @@ spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
 
 SERVICE.PROPERTY_NOT_FOUND = No Property Found!
 
-spring.cloud.config.uri=http://localhost:8888
-management.security.enabled=false
-spring.main.allow-bean-definition-overriding=true
-spring.config.import=optional:configserver:
+#spring.cloud.config.uri=http://localhost:8888
+#management.security.enabled=false
+#spring.main.allow-bean-definition-overriding=true
+#spring.config.import=optional:configserver:
