--- a/email-service.properties
+++ b/email-service.properties
@@ -2,19 +2,26 @@ spring.application.name = email-service
 
 #Make sure less secure App is enabled at link https://myaccount.google.com/lesssecureapps
 
-spring.mail.host = smtp.gmail.com
-spring.mail.username = stopnrest64@gmail.com
-spring.mail.password = awtsmkwqoehqvlho
+#spring.mail.host = smtp.gmail.com
+#spring.mail.username = stopnrest64@gmail.com
+#spring.mail.password = awtsmkwqoehqvlho
 
 server.port = 8092
 
 #Below Properties are needed for maintaining the session.
 #Two Step verification should not be enabled for gmail.
 
-spring.mail.properties.mail.smtp.auth = true
-spring.mail.properties.mail.smtp.socketFactory.port = 465
-spring.mail.properties.mail.smtp.socketFactory.class = javax.net.ssl.SSLSocketFactory
-spring.mail.properties.mail.smtp.socketFactory.fallback = false
+#spring.mail.properties.mail.smtp.auth = true
+#spring.mail.properties.mail.smtp.socketFactory.port = 465
+#spring.mail.properties.mail.smtp.socketFactory.class = javax.net.ssl.SSLSocketFactory
+#spring.mail.properties.mail.smtp.socketFactory.fallback = false
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=stopNrestHotelBookings@gmail.com
+spring.mail.password=Globalpass123
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
 
 #spring.cloud.config.uri=http://localhost:8888
 #management.security.enabled=false
