--- a/email-service.properties
+++ b/email-service.properties
@@ -3,8 +3,8 @@ spring.application.name = email-service
 #Make sure less secure App is enabled at link https://myaccount.google.com/lesssecureapps
 
 spring.mail.host = smtp.gmail.com
-#spring.mail.username = stopnrest64@gmail.com
-#spring.mail.password = awtsmkwqoehqvlho
+spring.mail.username = stopnrest64@gmail.com
+spring.mail.password = awtsmkwqoehqvlho
 
 server.port = 8092
 
@@ -18,8 +18,8 @@ spring.mail.properties.mail.smtp.socketFactory.fallback = false
 
 #spring.mail.host=smtp.gmail.com
 #spring.mail.port=587
-spring.mail.username=stopnresthotelbookings@gmail.com
-spring.mail.password=ohjbuceeamllzzxk
+#spring.mail.username=stopnresthotelbookings@gmail.com
+#spring.mail.password=ohjbuceeamllzzxk
 #spring.mail.properties.mail.smtp.auth=true
 #spring.mail.properties.mail.smtp.starttls.enable=true
 
